working with basic html tags

--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
     <title>LANDING PAGE</title>
 </head>
 <body>
-    <p>hello Lily</p>
-    <p>welcome to my webpage</p>
+   <div> <p>hello <strong>Lily</strong></p>
+    <p><small>welcome</small> to my <em>webpage</em></p>
+    <a href="https://github.com/umutesililiane/HTML-CSS-Landing-page" > Lily's github</a>
+    <a href="about.html"> About Page</a>
+</div>
+<div>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+    <ul>
+        <li>LILIANE</li>
+        <li>UMUTESI</li>
+    </ul>
+    <ol>
+        <li>LILIANE</li>
+        <li>UMUTESI</li>
+    </ol>
+</div>
+<span>This is a span tag</span>
+<hr>
+<img src="images/image1.jpeg" alt=" a cartoon image">
+
+<blockquote cite="https://yourstory.com/mystory/life-changing-advices-fabled-cartoon-characters">
+    anything is possible when you have inner peace
+</blockquote>
+<p style="color:orange;" > style me </p>
 </body>
 </html>
